--- a/style.css
+++ b/style.css
@@ -172,7 +172,7 @@
      section h4 {
          font-size: 7vh;
          font-weight: 400;
-         line-height: 8.5vw;
+         line-height: 8vw;
          width: 100%;
      }
 
@@ -270,7 +270,7 @@
          /* background-color: blueviolet; */
          grid-row: 2;
          grid-column: 1/6;
-         padding: 8vw 3vw;
+         padding: 2vw 3vw;
      }
 
      section h4 {
@@ -289,7 +289,7 @@
      main p {
          width: 100%;
          font-size: 3.5vw;
-         padding: 10px 10px;
+         padding: 2.2vh 3vw;
          line-height: 4.3vw;
          font-weight: 300;
      }
